create dynamic blog page

--- a/content/blog/とある開発者がOpenshiftを知った.mdx
+++ b/content/blog/とある開発者がOpenshiftを知った.mdx
@@ -6,7 +6,7 @@ tag:
   - インフラ構築
 ---
 
-[Openshift](https://docs.google.com/presentation/d/1E53dTRTv4kO01cndYj-sY4fLET1RXmoyXc4GiKLhJ3s/edit#slide=id.gaa3a0b12b9_0_160)
+> [Openshift](https://docs.google.com/presentation/d/1E53dTRTv4kO01cndYj-sY4fLET1RXmoyXc4GiKLhJ3s/edit#slide=id.gaa3a0b12b9_0_160)
 
 担当したプロジェクトで Openshift を触らせてもらったので、「CloudNative 時代」というキーワードにも触れながら、Openshift についてまとめておこうと思います。
 
