ready blog-components

--- a/content/blog/ANGLab ~カワハギ攻略への道~.mdx
+++ b/content/blog/ANGLab ~カワハギ攻略への道~.mdx
@@ -17,7 +17,7 @@ tag:
 
 ## カワハギ釣りについて
 
-![kawahagi.png](:storage/5628f804-12ed-47e6-9056-4cd81b4c9c02/7da1e363.png)
+![kawahagi.png](https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/kawahagi-dinner.png?zoom=2&w=1140&ssl=1)
 
 カワハギは秋冬が旬のシーズンで、肝に栄養をたくさん蓄えた「キモパン」と呼ばれるカワハギは釣り後の食卓を幸せにします。その美味しさは漁師さんが美味しいと思う魚ランキングの上位に君臨するほどです。
 
@@ -44,8 +44,9 @@ tag:
 
 > ##### 自分が購入したロッド
 >
-> [Amazon \| アブガルシア(Abu Garcia) 黒船 カワハギ KKWC-155S 8:2 先調子. 船竿 釣竿 カワハギ | アブガルシア(Abu Garcia) | 船竿](https://www.amazon.co.jp/gp/product/B071KJMBSN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
 > 通常のロッドより短めの 155cm ですが、細かいアクションがしやすいのでオススメです！
+>
+> [Amazon \| アブガルシア(Abu Garcia) 黒船 カワハギ KKWC-155S 8:2 先調子. 船竿 釣竿 カワハギ | アブガルシア(Abu Garcia) | 船竿](https://www.amazon.co.jp/gp/product/B071KJMBSN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
 
 ### 2. 針仕掛けにはこだわっておく！
 
@@ -61,7 +62,7 @@ tag:
 自分は仕掛けには SHIMANO さんのステファーノを使っていて、ステファーノでは「攻掛」「吸わせ」「吸わせ力」の３パターンがあります。幹糸には 3 つの針がつけられるので、3 パターンをつけてみてカワハギがどの針に掛かることが多いのかを確認してその日の調子が良い針を予想したりしてました。他にもステファーノでは変え針のハリスの長さが 6cm(通常)と 10cm(ロング)のものがあります。ハリスの長さが長いことによって、カワハギがアサリを口にした時の違和感が軽減されてアサリを吐き出す確率を減らしたりすることができるようになります。喰い渋りが目立つ時はこのロングを使うと効果的です。ステファーノでは、他にも高比重ビーズ付きやビーズの間隔が異なる仕掛けも売られているのですが、初心者の場合そこまで細かく意識しなくても良いかなとは思います。
 
 ↓[ステファーノのホームページ](https://fishing.shimano.co.jp/product/series/stephano/product/gear/index.html)より(多分グラフチャートの赤と紫は逆...)
-![b62b458d.png](:storage/5628f804-12ed-47e6-9056-4cd81b4c9c02/b62b458d.png)
+![b62b458d.png](https://i0.wp.com/fishing.shimano.co.jp/product/series/stephano/img/product/gear/ist_suwase-chart01.png?zoom=2&w=1140&ssl=1)
 
 メーカーによって色々変わるとは思いますが、少なくとも針のタイプはハゲ針と吸わせ針の 2 種類を持ち合わせていたほうがいいでしょう。
 
@@ -79,12 +80,12 @@ tag:
 
 この簡単な基本スタイルから少しずつアレンジをしていくイメージです。
 
-👉 カワハギにアピールを加えたい時は、1 と 2 の間に「タタキ」というオモリを着底させたままロッドを振るアクションを入れます。
-👉 カワハギ以外の外道をかわしたい時は、1 の回数を増やしてカワハギ以外がついて来れないようにします。
-👉 当たりが来ない時は、2 を「ゼロテンションではなく、PE ラインを少したるませて待つ」に変えます。
-👉 当たりはあるのに掛からない時は、3 を「当たりが来たら手首の力で軽くフックさせる」に変えます。(大ぶりな電撃合わせは禁物)
+- 👉 カワハギにアピールを加えたい時は、1 と 2 の間に「タタキ」というオモリを着底させたままロッドを振るアクションを入れます。
+- 👉 カワハギ以外の外道をかわしたい時は、1 の回数を増やしてカワハギ以外がついて来れないようにします。
+- 👉 当たりが来ない時は、2 を「ゼロテンションではなく、PE ラインを少したるませて待つ」に変えます。
+- 👉 当たりはあるのに掛からない時は、3 を「当たりが来たら手首の力で軽くフックさせる」に変えます。(大ぶりな電撃合わせは禁物)
 
-![illust_fishing.jpg](:storage/5628f804-12ed-47e6-9056-4cd81b4c9c02/ea37ea79.jpg)
+![illust_fishing.jpg](https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/illust_fishing.jpg?zoom=2&w=1140&ssl=1)
 
 調べるとたくさん誘い方のパターンが出てきますが、あまり小難しく考えずに基本形からアレンジして試すやり方がオススメです。その日の正解パターンが見つかることもあれば、釣るポイントを移動するとパターンが変わることもあるのでここはカワハギ釣りの駆け引きのポイントにもなります。先ほども書きましたが、これらの誘いをしやすくするためにも専用ロッドを使った方が良いです。
 
@@ -102,4 +103,5 @@ tag:
 <br />
 <br />
 <br />
+
 以上カワハギ釣りについてのまとめでした。自分でまた経験して分かることがあれば記事をアップデートしようと思います。
