--- a/content/blog/すぐに理解したいGitHub Actions.mdx
+++ b/content/blog/すぐに理解したいGitHub Actions.mdx
@@ -101,7 +101,7 @@ jobs:
 基本的には`.github/workflows`フォルダを作成して、その中に各ワークフローの YAML ファイルを配置しておきます。  
 たとえば、私の場合は、本ブランチにマージされたタイミングで動く開発環境にデプロイする用のワークフロー`deploy_dev.yml`と、PullRequest が作成したタイミングでユニットテストやコードチェックを実行するワークフロー`pull_request_analysis.yml`を`.github/workflow`に配置するイメージです。
 
-```sh
+```shell
 .github
 └── workflows
     ├── deploy_dev.yml
@@ -121,10 +121,8 @@ jobs:
 
 <br />
 <br />
-<br />
-<br />
-<br />
-毎度CI/CDのセットアップやら修正をしたり、コード書くのに集中できないのは面倒だなと思うことがありますが、GithubActionsでリポジトリ管理とインテグレーションされているとやっぱり安定感を感じます。これから積極的に使用して、さらに知見を深めていこうと思います。
+
+毎度 CI/CD のセットアップやら修正をしたり、コード書くのに集中できないのは面倒だなと思うことがありますが、GithubActions でリポジトリ管理とインテグレーションされているとやっぱり安定感を感じます。これから積極的に使用して、さらに知見を深めていこうと思います。
 
 <br />
 <br />
