update blog page index

--- a/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
+++ b/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
@@ -40,7 +40,9 @@ OAuth2.0 には認証フローが４種類定められていて、それらを**
 - Implicit
 - Client Credentials
 
-> OAuth...外部サイト(Facebook, Google, Slack etc...)からアクセストークンをもらったユーザーからアクセストークンをもらい、ユーザー情報を取得する標準化されたしくみ。
+> ##### OAuth
+>
+> 外部サイト(Facebook, Google, Slack etc...)からアクセストークンをもらったユーザーからアクセストークンをもらい、ユーザー情報を取得する標準化されたしくみ。
 >
 > ![22e5f8d7.png](attachments/673bae9a.png)
 >
