--- a/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
+++ b/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
@@ -46,7 +46,7 @@ OAuth2.0 には認証フローが４種類定められていて、それらを**
 >
 > ![22e5f8d7.png](attachments/673bae9a.png)
 >
-> ```text: 取得したステータスコードとアクセストークンのイメージ
+> ```:取得したステータスコードとアクセストークンのイメージ
 > HTTP/1.1 200 OK
 > Content-Type: application/json
 > Cache-Control: no-store
@@ -79,7 +79,7 @@ OAuth2.0 には認証フローが４種類定められていて、それらを**
 - エラーコード(API 提供側独自のコード)
 - 詳細情報へのリンク
 
-```json:エラー時のレスポンスボディの例
+```:エラー時のレスポンスボディの例
 {
   "error": {
     "code": 2013,
@@ -171,11 +171,11 @@ HTTP のキャッシュパターンには、「キャッシュの有効期限を
 
 以下の２パターンで実装することが多い。
 
-```text:期限切れを絶対時間で指定する
+```:期限切れを絶対時間で指定する
 Expires: Fri, 01 Jan 2020 00:00:00 GMT
 ```
 
-```text:経過時間で期限を決める
+```:経過時間で期限を決める
 Cash-Control: max-age=3600
 ```
 
@@ -207,7 +207,7 @@ https://example.com:8080
 
 プリフライトリクエストとは、「**異なるオリジン間でリクエストを行う前に、そのリクエストが受け入れられるのかを確認する**」こと。CORS によって確かにリクエスト結果の読み取りはできないが、リクエスト送信自体は可能となるのでセキュリティ上設けられている。HTTP メソッドの**OPTION**を使う。
 
-```text:プリフライトリクエストの例
+```:プリフライトリクエストの例
 OPTIONS /v1/users/123 HTTP/1.1
 Host: api.example.com
 Accept: application/json
