--- a/content/blog/入門-モダン監視.mdx
+++ b/content/blog/入門-モダン監視.mdx
@@ -1,96 +1,109 @@
 ---
 tag:
-- インフラ構築
+  - インフラ構築
 date: 2020-06-03T15:00:00Z
 title: 入門!モダン監視
-thumbnail: ''
-
+thumbnail: 'https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2020/06/%E5%85%A5%E9%96%80%EF%BC%81%E3%83%A2%E3%83%80%E3%83%B3%E7%9B%A3%E8%A6%96.png?resize=360%2C238&ssl=1'
 ---
-オライリーの「入門 監視 ―モダンなモニタリングのためのデザインパターン」について読んだのでまとめを残しておきます。ツールの紹介/使い方よりかは監視におけるベストプラクティスをまとめたような本なので、入門者向けのSREの取っ掛かり的な感じがしました。
+
+オライリーの「入門 監視 ―モダンなモニタリングのためのデザインパターン」について読んだのでまとめを残しておきます。ツールの紹介/使い方よりかは監視におけるベストプラクティスをまとめたような本なので、入門者向けの SRE の取っ掛かり的な感じがしました。
+
 > [「入門 監視 ―モダンなモニタリングのためのデザインパターン」](https://www.oreilly.co.jp/books/9784873118642/)
 
-
-
-
-
 ## 監視のベストプラクティス
+
 ### ・ツールよりも「何をやるか」に焦点を当てること
+
 監視の因果関係について考えましょう。「**監視の成功のためにツール・手順がある**」のであってツールが監視を成功に導くわけではありません。
 質の悪いツールや目的とは異なるツールを導入しないように(自分の首を絞めることに)注意し、必要に応じて自分でツールを作成することも最善策に考えましょう。  
-**サービスの初期段階はSaaSサービス**(e.g.Datadog, mackerel, AWS CloudWatch)を利用、**サービスの発展段階ではFOSS**(Free and OpenSource Software: Prometheus, Graphite, InfuluxDB Sensu etc...)を利用、サービスが成熟すると独自の監視プラットフォームを作成して利用するのが理想的。
+**サービスの初期段階は SaaS サービス**(e.g.Datadog, mackerel, AWS CloudWatch)を利用、**サービスの発展段階では FOSS**(Free and OpenSource Software: Prometheus, Graphite, InfuluxDB Sensu etc...)を利用、サービスが成熟すると独自の監視プラットフォームを作成して利用するのが理想的。
 
 ### ・監視を役割にするのではなく、「動いてるか」パフォーマンスを監視すること
-アラートを通知する場合は、「動いているか」を基準にしましょう。CPUやメモリの使用率をメトリクスに利用する際は、閾値・許容範囲を決定しおくべきです。また、メトリクスは高頻度に取得しておくことをオススメします。そして、通知の後はその問題修正へ取り組めるようにしましょう。
+
+アラートを通知する場合は、「動いているか」を基準にしましょう。CPU やメモリの使用率をメトリクスに利用する際は、閾値・許容範囲を決定しおくべきです。また、メトリクスは高頻度に取得しておくことをオススメします。そして、通知の後はその問題修正へ取り組めるようにしましょう。
 
 ### ・自動化を肯定すること
+
 クラウドネイティブな環境では、システムを集合体として認識するので監視の設定を自動化できるような工夫が必須です。  
 多くの監視で苦労しているチームは監視の設定に時間を費やしすぎる傾向にあるようです。
-また、自動化の一環としてIaC(Infrastructure as Code)へ取り組むことは当たり前の存在になっています。
-  
+また、自動化の一環として IaC(Infrastructure as Code)へ取り組むことは当たり前の存在になっています。
+
 ## 監視コンポーネント
+
 ### 1.データ収集
-現状はプッシュ型の方がスケールアウトのニーズを満たしやすく人気が高いようです。  
-* プル型...中央サーバーが全てのノードにメトリクスを送信してくるように要求する。スケールアウトがやや困難。
-* プッシュ型...各ノード上で動作しているエージェントが一定間隔あるいはイベント発生時にメトリクスを送信先へ送る。
-  
+
+現状はプッシュ型の方がスケールアウトのニーズを満たしやすく人気が高いようです。
+
+- プル型...中央サーバーが全てのノードにメトリクスを送信してくるように要求する。スケールアウトがやや困難。
+- プッシュ型...各ノード上で動作しているエージェントが一定間隔あるいはイベント発生時にメトリクスを送信先へ送る。
+
 メトリクスには４種類存在しており、
-* カウンタ...増加していく値のメトリクス
-* ゲージ...ある時点での値を表したメトリクス
-* ヒストグラム...観測値をサンプリングして集計した値を持つメトリクス
-* サマリー...ヒストグラムと似ているが変位値(全データを分割する値)を持つメトリクス
+
+- カウンタ...増加していく値のメトリクス
+- ゲージ...ある時点での値を表したメトリクス
+- ヒストグラム...観測値をサンプリングして集計した値を持つメトリクス
+- サマリー...ヒストグラムと似ているが変位値(全データを分割する値)を持つメトリクス
 
 > [Metric types \| Prometheus](https://prometheus.io/docs/concepts/metric_types/)
-  
-ログについては**JSONで構造化されたログ**を実際に利用するのがおすすめです。
-  
+
+ログについては**JSON で構造化されたログ**を実際に利用するのがおすすめです。
+
 ### 2.データストレージ
-収集されたメトリクスデータについては時系列データベース(タイムスタンプとメトリクス値のKVS)に保存されます。
-ストレージでは、通常はファイルシステム内のファイルとして保存されていることが多いが、高度な例ではElasticsearchなどの検索エンジンに保存されている場合もあります。
-  
+
+収集されたメトリクスデータについては時系列データベース(タイムスタンプとメトリクス値の KVS)に保存されます。
+ストレージでは、通常はファイルシステム内のファイルとして保存されていることが多いが、高度な例では Elasticsearch などの検索エンジンに保存されている場合もあります。
+
 ### 3.可視化
-GraphanaやSmashingなどのダッシュボード製品があり、可視化は楽しいですが、自分の監視するのに最適な情報のみを載せるようにしましょう。
-  
+
+Graphana や Smashing などのダッシュボード製品があり、可視化は楽しいですが、自分の監視するのに最適な情報のみを載せるようにしましょう。
+
 ### 4.分析とレポート
-SLAは分析・レポートの基準になりますが、実際はあまり役に立ちません。(つまり、レポートに意味はあるのか...？)
-むしろビジネスKPIとしてレポートを提出すること(例えば、ログインパフォーマンスやレイテンシ)の方が有益ではないでしょうか？技術指標をビジネス判断に役立てましょう。
-  
+
+SLA は分析・レポートの基準になりますが、実際はあまり役に立ちません。(つまり、レポートに意味はあるのか...？)
+むしろビジネス KPI としてレポートを提出すること(例えば、ログインパフォーマンスやレイテンシ)の方が有益ではないでしょうか？技術指標をビジネス判断に役立てましょう。
+
 ### 5.アラート
-アラートを作成する前に、アラートの意味を明確にするためにも手順書(サービスの目的、責任者、依存性、取得しているメトリクスやログの意味、アラート設定の理由)を作成しておきましょう。アラートの基準は閾値だけでなく、値の変化量にも着目すると良いアラートになります。そしてアラートの通知はメールではなく、Slackなどのチャットルームを利用し、緊急性が高い場合はSMSで通知しましょう。
-  
-  
+
+アラートを作成する前に、アラートの意味を明確にするためにも手順書(サービスの目的、責任者、依存性、取得しているメトリクスやログの意味、アラート設定の理由)を作成しておきましょう。アラートの基準は閾値だけでなく、値の変化量にも着目すると良いアラートになります。そしてアラートの通知はメールではなく、Slack などのチャットルームを利用し、緊急性が高い場合は SMS で通知しましょう。
+
 ## インシデント管理
-ITILのフレームワークをシンプルに行うと以下の通り。  
+
+ITIL のフレームワークをシンプルに行うと以下の通り。
+
 1. インシデントの認識
 2. インシデントの記録
 3. インシデントの診断、分類、解決、クローズ
 4. インシデント解決後、復旧力を高めるための改善策を考える(今後はこういったことが起きないように尽力いたします的な)
-  
+
 実際の解決に時間を要するインシデントについては役割をきちんと決めて起きましょう。
-* 現場指揮官(Incident Commander...インシデントの調整・決断を行う人)
-* スクライブ(インシデントの記録係)
-* コミュニケーション調整係(社内外連携、最新状況のアップデートを行う人)
-* SME(Subject Matter Expert...インシデント対応する人)
+
+- 現場指揮官(Incident Commander...インシデントの調整・決断を行う人)
+- スクライブ(インシデントの記録係)
+- コミュニケーション調整係(社内外連携、最新状況のアップデートを行う人)
+- SME(Subject Matter Expert...インシデント対応する人)
 
 ここまでやると綿密ですが、記録・調整・連携・対応をうまく分担すべきかと思います。
 
 ## それぞれの監視
+
 監視の対象によって、監視するポイントも変化します。それぞれ監視について重要なことについてツールも紹介しながらまとめてみました。
-  
+
 ### フロントエンド監視
-フロントエンド監視はページロード、静的アセットへのアクセスを高速化させることです。これは非常に重要で、コンバージョン率の低下やユーザー満足度の低下を防げます。React, Vue.js, Angularの登場でSPA人気が高い時代では、遅いアプリケーションは使ってすらもらえないのです。代表的なフロントエンド監視ツールについては以下を参考にしてください。
+
+フロントエンド監視はページロード、静的アセットへのアクセスを高速化させることです。これは非常に重要で、コンバージョン率の低下やユーザー満足度の低下を防げます。React, Vue.js, Angular の登場で SPA 人気が高い時代では、遅いアプリケーションは使ってすらもらえないのです。代表的なフロントエンド監視ツールについては以下を参考にしてください。
 
 #### [Google Analytics](https://analytics.google.com/analytics)
-リアルタイムユーザー監視の定番SaaS。[API](https://developers.google.com/analytics/devguides/reporting/core/v4/?hl=ja)も充実しており、アクティブユーザー、セッション数、直帰率などWebサイトを最適化する間違いないツールです。
+
+リアルタイムユーザー監視の定番 SaaS。[API](https://developers.google.com/analytics/devguides/reporting/core/v4/?hl=ja)も充実しており、アクティブユーザー、セッション数、直帰率など Web サイトを最適化する間違いないツールです。
 
 #### [Speed Index](https://sites.google.com/a/webpagetest.org/docs/using-webpagetest/metrics/speed-index)
+
 > [WebpageTest](https://www.webpagetest.org/)
-視覚的にページロード開始から終了までをSpeed Indexアルゴリズムによりユーザー体感で評価してくれます。
-以下デフォルトでページで有効化されているNavigation Timing APIについてまとめたタイムスケジュールで、DOMのレンダリング開始から完了についてなど、様々なメトリクスを取得可能となってます。Speed IndexでもこれらのAPIから情報を取得しています。  
+> 視覚的にページロード開始から終了までを Speed Index アルゴリズムによりユーザー体感で評価してくれます。
+> 以下デフォルトでページで有効化されている Navigation Timing API についてまとめたタイムスケジュールで、DOM のレンダリング開始から完了についてなど、様々なメトリクスを取得可能となってます。Speed Index でもこれらの API から情報を取得しています。
 
 ![navigation-timing-api.png](https://w3c.github.io/navigation-timing/timestamp-diagram.svg)
 
-
-  
 ### アプリケーション監視
 
 #### メトリクス vs ログ
@@ -103,64 +116,57 @@ app.login_latency_ms = 5
 {'app_name': 'foo', 'login_latency_ms': 5}
 ```
 
-基本的にメトリクスよりログ(JSONベース推奨)の方が解析には便利ですが、運用するチームにとってメトリクスで考える方が楽か、ログで考える方が楽かで選択するのが良いらしいです。
+基本的にメトリクスよりログ(JSON ベース推奨)の方が解析には便利ですが、運用するチームにとってメトリクスで考える方が楽か、ログで考える方が楽かで選択するのが良いらしいです。
 
 #### アプリ監視の要点
+
 - APM(Application Performance Monitoring)ツールは自動で様々な情報を集計してくれるが、アプリケーション背後のビジネスコンテキストは全く理解していないので使う際には注意が必要
 - ビルドからリリースに至るプロセスを監視することを推奨
-- APIにhealthエンドポイントを設けることはAPIの生存確認になるので推奨
-
+- API に health エンドポイントを設けることは API の生存確認になるので推奨
 
 ### コンテナ監視
+
 コンテナによるマイクロサービス化の問題は大まかに以下の２点が挙げられます。
 
 ・ネットワーキング
 ・可観測性
 
+マイクロサービス化によってユーザーリクエストで何が起きているのかを把握するのが困難になります。そこで、複雑なサービス間のやりとりを監視するための方法として**分散トレーシング**が必要になります。分散トレーシングの仕組みは簡単にいうと、**システムにリクエストが入る前にリクエストに ID をタグ付けしておき、この ID がリクエストは「どのサービスにアクセス」して「どのくらい処理に時間をかけたか」を収集**します。
 
-マイクロサービス化によってユーザーリクエストで何が起きているのかを把握するのが困難になります。そこで、複雑なサービス間のやりとりを監視するための方法として**分散トレーシング**が必要になります。分散トレーシングの仕組みは簡単にいうと、**システムにリクエストが入る前にリクエストにIDをタグ付けしておき、このIDがリクエストは「どのサービスにアクセス」して「どのくらい処理に時間をかけたか」を収集**します。
-
-  
 ### サーバー
 
 #### 各種リソース
 
 各種リソースを監視するためのメトリクス格納フォルダとコマンドについては以下の通りです。
 
-|  リソース  |  格納フォルダ |  コマンド  |
-| ---- | ---- | ---- |
-|  CPU  |  /proc/stat  |  top  |
-|  メモリ  |  /proc/meminfo  |  free  |
-|  ネットワーク  |  /proc/net/dev  |  ifconfig or ip  |
-|  ディスク  |  /proc/diskstats  |  iostat  |
-|  ロードアベレージ  |  /proc/loadavg  |  uptime  |
+| リソース         | 格納フォルダ    | コマンド       |
+| ---------------- | --------------- | -------------- |
+| CPU              | /proc/stat      | top            |
+| メモリ           | /proc/meminfo   | free           |
+| ネットワーク     | /proc/net/dev   | ifconfig or ip |
+| ディスク         | /proc/diskstats | iostat         |
+| ロードアベレージ | /proc/loadavg   | uptime         |
 
-※ロードアベレージとはCPUの処理待ちしているプロセスがいくつあるかの指標
+※ロードアベレージとは CPU の処理待ちしているプロセスがいくつあるかの指標
 
 #### サーバーの種類ごとの監視
 
-##### Webサーバー
-コネクション数ではなく、リクエスト数(request per second)に注目するようにします。その他にもHTTPステータスコードの監視なども有効だそうです。
+##### Web サーバー
 
-> ###### HTTPキープアライブ
-> 従来はリクエストごとにコネクションを張っては切断していたが、HTTPキープアライブによりWebサーバー/クライアント間でコネクションを切断せずに開いたままにしておくことが可能になった。
+コネクション数ではなく、リクエスト数(request per second)に注目するようにします。その他にも HTTP ステータスコードの監視なども有効だそうです。
 
-##### DBサーバー
+> ###### HTTP キープアライブ
+>
+> 従来はリクエストごとにコネクションを張っては切断していたが、HTTP キープアライブにより Web サーバー/クライアント間でコネクションを切断せずに開いたままにしておくことが可能になった。
+
+##### DB サーバー
+
 監視の指標として以下の優先順位で監視することが推奨されています。
-1. クライアントのコネクション数(MySQLでは「スレッド」と呼ぶ)
-2. 秒間クエリ数(DBのトラフィックレベルを確認できる)
+
+1. クライアントのコネクション数(MySQL では「スレッド」と呼ぶ)
+2. 秒間クエリ数(DB のトラフィックレベルを確認できる)
 3. IOPS(ディスクへの読み書き速度)
 
-その他もロードバランサーやDNSなどサーバーの役割ごとにそれぞれの監視要領が書かれていましたが、キリがないので省略します。
+その他もロードバランサーや DNS などサーバーの役割ごとにそれぞれの監視要領が書かれていましたが、キリがないので省略します。
 
-
-
-
-
-
-
-
-自分自身この本を読んでさらに実践していこうと思いますが、SREの個人勉強はユーザー多数のアプリやサイトありきなので、どうやって学習していこうか模索中です。また、モダンインフラについて触れるような機会があれば記事書きたいと思います。
-
-
-
+自分自身この本を読んでさらに実践していこうと思いますが、SRE の個人勉強はユーザー多数のアプリやサイトありきなので、どうやって学習していこうか模索中です。また、モダンインフラについて触れるような機会があれば記事書きたいと思います。
