replace thumbnail cloudinary

--- a/content/blog/ANGLab ~カワハギ攻略への道~.mdx
+++ b/content/blog/ANGLab ~カワハギ攻略への道~.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-12-01T22:44:38.000+00:00
 title: ANGLab ~カワハギ攻略への道~
-thumbnail: https://i0.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/%E3%82%AB%E3%83%AF%E3%83%8F%E3%82%AD%E3%82%99%E6%94%BB%E7%95%A5%E3%81%B8%E3%81%AE%E9%81%93.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834503/media/blog/thumbnail/ANGLab_-%E3%82%AB%E3%83%AF%E3%83%8F%E3%82%AD%E3%82%99%E6%94%BB%E7%95%A5%E3%81%B8%E3%81%AE%E9%81%93-_xtsxl8.png'
 tag:
   - ANGLab
 ---
