--- a/content/blog/すぐに理解したいGitHub Actions.mdx
+++ b/content/blog/すぐに理解したいGitHub Actions.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-05-14T22:44:38.000+00:00
 title: すぐに理解したいGitHub Actions
-thumbnail: https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/05/GithubActions%E3%81%AE%E4%B8%96%E7%95%8C-1.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834504/media/blog/thumbnail/%E3%81%99%E3%81%8F%E3%82%99%E3%81%AB%E7%90%86%E8%A7%A3%E3%81%97%E3%81%9F%E3%81%84GitHubActions_klihab.png'
 tag:
   - インフラ構築
 ---
