--- a/content/blog/とある開発者がOpenshiftを知った.mdx
+++ b/content/blog/とある開発者がOpenshiftを知った.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-01-25T22:44:38.000+00:00
 title: とある開発者がOpenshiftを知った
-thumbnail: https://i0.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/04/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88-2021-04-19-23.56.46.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834504/media/blog/thumbnail/%E3%81%A8%E3%81%82%E3%82%8B%E9%96%8B%E7%99%BA%E8%80%85%E3%81%8B%E3%82%99Openshift%E3%82%92%E7%9F%A5%E3%81%A3%E3%81%9F_rbpmbq.png'
 tag:
   - インフラ構築
 ---
