--- a/content/blog/入門-モダン監視.mdx
+++ b/content/blog/入門-モダン監視.mdx
@@ -3,7 +3,7 @@ tag:
   - インフラ構築
 date: 2020-06-03T15:00:00Z
 title: 入門!モダン監視
-thumbnail: 'https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2020/06/%E5%85%A5%E9%96%80%EF%BC%81%E3%83%A2%E3%83%80%E3%83%B3%E7%9B%A3%E8%A6%96.png?resize=360%2C238&ssl=1'
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834505/media/blog/thumbnail/%E5%85%A5%E9%96%80_%E3%83%A2%E3%82%BF%E3%82%99%E3%83%B3%E7%9B%A3%E8%A6%96_czqmao.png'
 ---
 
 オライリーの「入門 監視 ―モダンなモニタリングのためのデザインパターン」について読んだのでまとめを残しておきます。ツールの紹介/使い方よりかは監視におけるベストプラクティスをまとめたような本なので、入門者向けの SRE の取っ掛かり的な感じがしました。
