--- a/content/blog/APIモックライブラリで学ぶService Worker.mdx
+++ b/content/blog/APIモックライブラリで学ぶService Worker.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-08-27T22:44:38.000+00:00
 title: APIモックライブラリで学ぶService Worker
-thumbnail: https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/08/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88-2021-08-27-22.52.13.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834503/media/blog/thumbnail/API%E3%83%A2%E3%83%83%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%95%E3%82%99%E3%83%A9%E3%83%AA%E3%81%A6%E3%82%99%E5%AD%A6%E3%81%B5%E3%82%99ServiceWorker_nuz6ha.png'
 tag:
   - Web開発
 ---
