--- a/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
+++ b/content/blog/RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2020-09-12T22:44:38.000+00:00
 title: RESTful API設計のベストプラクティス　-Web API the Good Partsまとめ-
-thumbnail: https://i0.wp.com/www.mushroom-blog.com/wp-content/uploads/2020/09/web-api-the-good-parts.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834504/media/blog/thumbnail/RESTful_API%E8%A8%AD%E8%A8%88%E3%81%AE%E3%83%98%E3%82%99%E3%82%B9%E3%83%88%E3%83%95%E3%82%9A%E3%83%A9%E3%82%AF%E3%83%86%E3%82%A3%E3%82%B9-WebAPI_theGoodParts%E3%81%BE%E3%81%A8%E3%82%81-_fuvgad.png'
 tag:
   - Web開発
   - サーバーサイド
