--- a/content/blog/マイクロサービスで進めたアジャイル開発プロジェクトの失敗.mdx
+++ b/content/blog/マイクロサービスで進めたアジャイル開発プロジェクトの失敗.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-04-16T22:44:38.000+00:00
 title: マイクロサービスで進めたアジャイル開発プロジェクトの失敗
-thumbnail: https://i1.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/04/%E3%81%97%E3%81%8F%E3%81%97%E3%82%99%E3%82%8A%E5%85%88%E7%94%9F.png?zoom=2&resize=360%2C238&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1646834505/media/blog/thumbnail/%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%AD%E3%82%B5%E3%83%BC%E3%83%92%E3%82%99%E3%82%B9%E3%81%A6%E3%82%99%E9%80%B2%E3%82%81%E3%81%9F%E3%83%95%E3%82%9A%E3%83%AD%E3%82%B7%E3%82%99%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E5%A4%B1%E6%95%97_emteji.png'
 tag:
   - コラム
 ---
