migrate content blog & works

--- a/content/works/NakedDoc.mdx
+++ b/content/works/NakedDoc.mdx
@@ -3,7 +3,7 @@ date: 2020-07-07T22:44:38.000+00:00
 title: NakedDoc
 thumbnail: https://i1.wp.com/www.mushroom-blog.com/wp-content/uploads/2020/07/nake_logo_header.png?w=2280&ssl=1
 tag:
-  - Web
+  - App
 ---
 
 https://yellow-high5.github.io/naked_doc
