--- a/content/works/HostX.mdx
+++ b/content/works/HostX.mdx
@@ -3,7 +3,7 @@ date: 2019-10-10T22:44:38.000+00:00
 title: HostX
 thumbnail: https://i1.wp.com/www.mushroom-blog.com/wp-content/uploads/2019/11/hostx0.jpeg?w=2298&ssl=1
 tag:
-  - Web
+  - App
 ---
 
 業務で作ったホストへのリモートアクセスのドキュメント検索ツール。
