--- a/content/works/MineSweeperR.mdx
+++ b/content/works/MineSweeperR.mdx
@@ -3,7 +3,7 @@ date: 2018-10-23T22:44:38.000+00:00
 title: MineSweeperR
 thumbnail: https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2019/05/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88-2019-05-23-18.47.43.png?w=1936&ssl=1
 tag:
-  - Web
+  - App
 ---
 
 https://react-minesweeper-r.herokuapp.com/
