fix build error

--- a/content/blog/Typescript -型と関数とクラスとインターフェース-.mdx
+++ b/content/blog/Typescript -型と関数とクラスとインターフェース-.mdx
@@ -271,18 +271,18 @@ Typescript には組み込みで型を定義したり、拡張させる型ユー
 マップ型とは、対応づけをさらに強化して、値の型に制約を与えるのに便利な型です。  
 条件型とは、型の絞り込むのに便利な型です。
 
-| 型ユーティリティ     | 説明                                                               |
-| -------------------- | ------------------------------------------------------------------ |
-| Record<Keys, Values> | Key 型のキーと Values 型の値を持つオブジェクト                     |
-| Partial<Object>      | オブジェクト内のすべてのフィールドを省略可能にする                 |
-| Required<Object>     | オブジェクト内のすべてのフィールドを必須にする                     |
-| Readonly<Object>     | オブジェクト内のすべてのフィールドを読み取り専用に指定する         |
-| Pick<Object, Keys>   | 指定された Keys だけを持つ、オブジェクトのサブタイプを返す         |
-| Exclude<T, U>        | T には含まれているが、U には含まれていない型を計算する             |
-| Extract<T, U>        | T に含まれている型のうち、U に割り当てることのできるものを計算する |
-| NonNullable<T>       | T から null と undefined は除外して返す                            |
-| ReturnType<F>        | 関数の型から戻り値の型を返す                                       |
-| InstanceType<C>      | クラスの型からインスタンスの型を返す                               |
+| 型ユーティリティ       | 説明                                                               |
+| ---------------------- | ------------------------------------------------------------------ |
+| `Record<Keys, Values>` | Key 型のキーと Values 型の値を持つオブジェクト                     |
+| `Partial<Object>`      | オブジェクト内のすべてのフィールドを省略可能にする                 |
+| `Required<Object>`     | オブジェクト内のすべてのフィールドを必須にする                     |
+| `Readonly<Object>`     | オブジェクト内のすべてのフィールドを読み取り専用に指定する         |
+| `Pick<Object, Keys>`   | 指定された Keys だけを持つ、オブジェクトのサブタイプを返す         |
+| `Exclude<T, U>`        | T には含まれているが、U には含まれていない型を計算する             |
+| `Extract<T, U>`        | T に含まれている型のうち、U に割り当てることのできるものを計算する |
+| `NonNullable<T>`       | T から null と undefined は除外して返す                            |
+| `ReturnType<F>`        | 関数の型から戻り値の型を返す                                       |
+| `InstanceType<C>`      | クラスの型からインスタンスの型を返す                               |
 
 > 追記: 以下の記事がよくまとまっています
 > https://qiita.com/k-penguin-sato/items/e2791d7a57e96f6144e5
