migrate thumbnail content

--- a/content/works/HostX.mdx
+++ b/content/works/HostX.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2019-10-10T22:44:38.000+00:00
 title: HostX
-thumbnail: https://i1.wp.com/www.mushroom-blog.com/wp-content/uploads/2019/11/hostx0.jpeg?w=2298&ssl=1
+thumbnail: https://res.cloudinary.com/dso4npatn/image/upload/v1647049674/media/works/insert/hostx0_dnapo2.jpg
 tag:
   - App
 ---
@@ -11,5 +11,7 @@ tag:
 社内でオンプレサーバーへのリモートアクセス手順をエクセルで管理していたので、いい加減に Web ドキュメントに変えた。
 検索フォームにホスト名を打ち、ヒットしたホストへアクセスボタンを押すと、それぞれのシステムごとのパスワードなども反映されたドキュメントが合わせて閲覧できる。
 Excel->CSV->JSON に変換したデータを使って静的サイトとしてデプロイ完了。変換を自動化できたらもっと良かったかなとは思いつつ.
+
+![](https://res.cloudinary.com/dso4npatn/image/upload/v1647049674/media/works/insert/hostx1_cmnpy3.jpg)
 
 ドキュメント作成ツールなどの md ファイルを扱える[Gatsby](https://www.gatsbyjs.com/)はかなり柔軟で優秀だという知見が得られた。
