--- a/content/works/NakedDoc.mdx
+++ b/content/works/NakedDoc.mdx
@@ -1,12 +1,14 @@
 ---
 date: 2020-07-07T22:44:38.000+00:00
 title: NakedDoc
-thumbnail: https://i1.wp.com/www.mushroom-blog.com/wp-content/uploads/2020/07/nake_logo_header.png?w=2280&ssl=1
+thumbnail: https://res.cloudinary.com/dso4npatn/image/upload/v1647049660/media/works/thumbnail/nake_logo_header_s2dn60.png
 tag:
   - App
 ---
 
 https://yellow-high5.github.io/naked_doc
 
-ドキュメント生成ツールとして作成。ソースコードの content フォルダの Markdown を編集するだけで、ドキュメントが web 上で簡単に公開までできます。会
-社の社内 wiki として運用するのを目的に実装しました。ドキュメントの全文検索には Aloglia が使われていますが、社内 wiki の検索エンジンには Lunr.js を使いました。webmanifest と sw.js を含めて簡単に PWA に対応させることができました。
+ドキュメント生成ツールとして作成。ソースコードの content フォルダの Markdown を編集するだけで、ドキュメントが web 上で簡単に公開までできる。会
+社の社内 wiki として運用するのを目的に実装。ドキュメントの全文検索には Aloglia が使われているが、社内 wiki の検索エンジンには Lunr.js を使った。webmanifest と sw.js を含めて簡単に PWA に対応。
+
+![](https://res.cloudinary.com/dso4npatn/image/upload/v1647049674/media/works/insert/naked-doc-intro_lpcx51.png)
