--- a/content/works/mashroomAt.mdx
+++ b/content/works/mashroomAt.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2022-03-12T08:44:38.000+00:00
 title: m@shroom
-thumbnail: 'https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/04/blog_header-e1617637760731.png?fit=480%2C160&ssl=1'
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1647050604/media/works/thumbnail/m_shroom_fcnhzf.png'
 tag:
   - App
 ---
