--- a/content/works/DeidaraHand.mdx
+++ b/content/works/DeidaraHand.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2021-11-20T08:44:38.000+00:00
 title: デイダラの手
-thumbnail: 'https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/deidara-1-e1639197289861.png?w=1080&ssl=1'
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1647049659/media/works/thumbnail/deidara_lkael9.png'
 tag:
   - CG
 ---
@@ -10,4 +10,4 @@ tag:
 
 手の関節を動かそうとしてみたがリギング難しい...。
 
-![](https://www.mushroom-blog.com/wp-content/uploads/2021/12/My-Post.png)
+![](https://res.cloudinary.com/dso4npatn/image/upload/v1647049674/media/works/insert/My-Post_l4th75.png)
