--- a/content/works/LiveVoice.mdx
+++ b/content/works/LiveVoice.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2019-08-10T22:44:38.000+00:00
 title: Live Voice
-thumbnail: https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2019/05/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88-2019-05-23-18.43.17.png?w=1644&ssl=1
+thumbnail: 'https://res.cloudinary.com/dso4npatn/image/upload/v1647050127/media/works/thumbnail/live-voice_q3efkb.png'
 tag:
   - App
 ---
