replace image content from cloudinary

--- a/content/blog/ANGLab ~カワハギ攻略への道~.mdx
+++ b/content/blog/ANGLab ~カワハギ攻略への道~.mdx
@@ -17,7 +17,7 @@ tag:
 
 ## カワハギ釣りについて
 
-![kawahagi.png](https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/kawahagi-dinner.png?zoom=2&w=1140&ssl=1)
+![kawahagi.png](https://res.cloudinary.com/dso4npatn/image/upload/v1647150483/media/blog/insert/kawahagi-dinner_jg69xh.png)
 
 カワハギは秋冬が旬のシーズンで、肝に栄養をたくさん蓄えた「キモパン」と呼ばれるカワハギは釣り後の食卓を幸せにします。その美味しさは漁師さんが美味しいと思う魚ランキングの上位に君臨するほどです。
 
@@ -85,7 +85,7 @@ tag:
 - 👉 当たりが来ない時は、2 を「ゼロテンションではなく、PE ラインを少したるませて待つ」に変えます。
 - 👉 当たりはあるのに掛からない時は、3 を「当たりが来たら手首の力で軽くフックさせる」に変えます。(大ぶりな電撃合わせは禁物)
 
-![illust_fishing.jpg](https://i2.wp.com/www.mushroom-blog.com/wp-content/uploads/2021/12/illust_fishing.jpg?zoom=2&w=1140&ssl=1)
+![illust_fishing.jpg](https://res.cloudinary.com/dso4npatn/image/upload/v1647150483/media/blog/insert/illust_fishing_wpjgu4.jpg)
 
 調べるとたくさん誘い方のパターンが出てきますが、あまり小難しく考えずに基本形からアレンジして試すやり方がオススメです。その日の正解パターンが見つかることもあれば、釣るポイントを移動するとパターンが変わることもあるのでここはカワハギ釣りの駆け引きのポイントにもなります。先ほども書きましたが、これらの誘いをしやすくするためにも専用ロッドを使った方が良いです。
 
