--- a/content/blog/Typescript -型と関数とクラスとインターフェース-.mdx
+++ b/content/blog/Typescript -型と関数とクラスとインターフェース-.mdx
@@ -10,13 +10,13 @@ tag:
 
 > [プログラミング TypeScript ―スケールする JavaScript アプリケーション開発](https://www.amazon.co.jp/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0TypeScript-%E2%80%95%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%AB%E3%81%99%E3%82%8BJavaScript%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E9%96%8B%E7%99%BA-Boris-Cherny/dp/4873119049/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0+typescript&qid=1587723730&sr=8-1)
 
-モジュールや型宣言周りについては[以前も記事](https://www.mushroom-blog.com/325/)にしたので、Typescript のモダン型システムについて振り返りできるようにまとめを残しておくことにします。
+モジュールや型宣言周りについては前回記事にしたので、Typescript のモダン型システムについて振り返りできるようにまとめを残しておくことにします。
 
 ## 型
 
 まずは Typescript で利用できる型を理解し、その型階層構造についてまとめられた以下の最高の図を抑えるべきです。
 
-![](https://www.mushroom-blog.com/wp-content/uploads/2020/04/typescriptの型階層構造.png)
+![](https://res.cloudinary.com/dso4npatn/image/upload/v1647150483/media/blog/insert/typescript%E3%81%AE%E5%9E%8B%E9%9A%8E%E5%B1%A4%E6%A7%8B%E9%80%A0_rtygln.png)
 
 #### unknown について
 
