--- a/content/blog/ユニバーサルJavascriptとその周辺ツール.mdx
+++ b/content/blog/ユニバーサルJavascriptとその周辺ツール.mdx
@@ -197,4 +197,5 @@ webpack の場合は css や画像も一つの JS ファイルとしてまとめ
 
 ### 気になる今後の開発周りのツールの動向
 
-> [React のユーザーから見た今後のフロントエンドの予想 · GitHub](https://gist.github.com/mizchi/106d3c1bb8b8e5b46b45ceeeab0c348b) > [2019 年版: 脱 Babel!フロント/JS 開発を TypeScript に移行するための環境整備マニュアル - Qiita](https://qiita.com/shibukawa/items/0a1aaf689d5183c6e0f1)
+> - [React のユーザーから見た今後のフロントエンドの予想 · GitHub](https://gist.github.com/mizchi/106d3c1bb8b8e5b46b45ceeeab0c348b)
+> - [2019 年版: 脱 Babel!フロント/JS 開発を TypeScript に移行するための環境整備マニュアル - Qiita](https://qiita.com/shibukawa/items/0a1aaf689d5183c6e0f1)
