--- a/content/blog/GKEハンズオン -Vue.js + Spring Boot + MySQL-.mdx
+++ b/content/blog/GKEハンズオン -Vue.js + Spring Boot + MySQL-.mdx
@@ -122,25 +122,25 @@ api:
 Kubernetes クラスターの作成からクラスターへのアプリデプロイまでの大まかな流れは以下の感じでした。
 Kubernets Engine API と Service Networking API を Enabled にする必要があります。
 
-**1. VPC ネットワーク作成**
-**2. サブネット作成**
-**3. ファイアウォール設定**
-**4. Kubernetes クラスターを作成**
-**5. VPC ネットワーク内で IP アドレス範囲を割り当てる**
-**6. プライベート接続の作成**
-**7. CloudSQL MySQL インスタンス(プライベート IP アドレス割り当て)の作成**
-**8. YAML ファイル書き換え**
-**9. ConfigMap を作成**
-**10. API(SpringBoot)イメージをビルド&プッシュ**
-**11. kubectl でバックエンド用のリソースを適用**
-**12. フロントエンド(Vue.js)イメージをビルド&プッシュ**
-**13. kubectl でフロントエンド用のリソースを適用**
+1. VPC ネットワーク作成
+2. サブネット作成
+3. ファイアウォール設定
+4. Kubernetes クラスターを作成
+5. VPC ネットワーク内で IP アドレス範囲を割り当てる
+6. プライベート接続の作成
+7. CloudSQL MySQL インスタンス(プライベート IP アドレス割り当て)の作成
+8. YAML ファイル書き換え
+9. ConfigMap を作成
+10. API(SpringBoot)イメージをビルド&プッシュ
+11. kubectl でバックエンド用のリソースを適用
+12. フロントエンド(Vue.js)イメージをビルド&プッシュ
+13. kubectl でフロントエンド用のリソースを適用
 
-**1-7**については、GCP の一般的なドキュメントを読めば書いてあることを実行していくだけなので詳細は省略します。  
+**1〜7**については、GCP の一般的なドキュメントを読めば書いてあることを実行していくだけなので詳細は省略します。  
 ポイントとしては CloudSQL 用のプライベート IP を取得するところだと思います。ローカルではコンテナをホストに公開して開発を行った方が良いですが、本番の GCP 内部では DB へのアクセスはプライベート IP を使って接続するのが一般的です。  
 また、今回 GKE 上に作った API は外部公開されてしまう仕様となっていますが、内部 API として公開するには[Cloud IAP for GKE の有効化](https://cloud.google.com/iap/docs/enabling-kubernetes-howto?hl=ja)が必要になるようです。
 
-**8-13**については、Kuberntes 上でアプリ構築とそれに対するリソースを定義を行っています。プロジェクト構成は manifests フォルダに各リソースの YAML ファイルを作り、サービス単位(Frontend と Backend)でそれらをまとめたものを all-in-one フォルダに格納しています。  
+**8〜13**については、Kuberntes 上でアプリ構築とそれに対するリソースを定義を行っています。プロジェクト構成は manifests フォルダに各リソースの YAML ファイルを作り、サービス単位(Frontend と Backend)でそれらをまとめたものを all-in-one フォルダに格納しています。  
 バックエンドサービスが先に立ち上がって IP を確立してくれないと、フロントエンドのアクセスする対象の IP が見つからなくなるので、シェル内での実行順序は試行錯誤しました。
 
 #### イメージビルドと GCR ヘプッシュ
