--- a/content/blog/ざっとはじめましてGo言語.mdx
+++ b/content/blog/ざっとはじめましてGo言語.mdx
@@ -9,7 +9,8 @@ tag:
 Go 言語を入門する上での簡単なメモをまとめておきます。  
 以下を参考にすると、学習が捗りました。
 
-> [Go 言語の初心者が見ると幸せになれる場所](https://qiita.com/tenntenn/items/0e33a4959250d1a55045) >[Awesome Go](https://qiita.com/hatai/items/f31914f37dc6c53b2bce)
+> - [Go 言語の初心者が見ると幸せになれる場所](https://qiita.com/tenntenn/items/0e33a4959250d1a55045)
+> - [Awesome Go](https://qiita.com/hatai/items/f31914f37dc6c53b2bce)
 
 ## 第一印象:Go 文法で気になったところ
 
