--- a/content/blog/Go言語で簡単な画像処理のツール類をつくってみた。.mdx
+++ b/content/blog/Go言語で簡単な画像処理のツール類をつくってみた。.mdx
@@ -7,7 +7,7 @@ tag:
   - 実装ネタ帳
 ---
 
-Go 言語初学者です。普段の生息界隈は JS/TS+Java ですが、サーバーサイド言語の処理をもっと得意になりたいという理由から、今年から Go 言語に挑戦しています。挑戦理由は「モダン, マルチスレッド, コンテナ関連での活躍」が挙げられます。
+Go 言語初学者です。普段の生息界隈は フロントエンド ですが、サーバーサイド言語の処理をもっと得意になりたいという理由から、今年から Go 言語に挑戦しています。挑戦理由は「モダン, マルチスレッド, コンテナ関連での活躍」が挙げられます。
 
 やはり、実際に何かを作って習得していくスタイルが自分には合っているので、今回は「画像処理」をテーマに、CLI としても API としても使えるツール[yellow-high5/pictar](https://github.com/yellow-high5/pictar)を作ってみました。画像処理といっても CNN を使って画像認識させるような高度なものではないです。
 
