sanitize error work arround

--- a/content/blog/Gatsbyのビルトインコンポーネント.mdx
+++ b/content/blog/Gatsbyのビルトインコンポーネント.mdx
@@ -15,7 +15,7 @@ Gatsby には以下のコンポーネントが組み込まれている(Image は
 - \<StaticImage\>
 - \<GatsbyImage\>
 
-## \<Link\>
+## Link
 
 Gatsby アプリ内のページに遷移させる場合は\<a\>タグではなく基本的にこちらを使う。
 ユーザーがページに移動するまでにリソースが利用できるようにページリソースをプリフェッチする(「プリロード」)機能を組み込んでいる。
@@ -45,14 +45,14 @@ const PartialNavLink = props => (
 - `nvaigate`...`import { navigate } from "gatsby"`を使えば、関数の中でリンク遷移を使える(Next の`useRouter`的な存在)。オプションに`state`や`replace`も指定できる。
 - `withPrefix`...Gatsby の<Link\>コンポーネントは開発と本番環境で正しい URL の作成を自動的に処理してくれるが、手動で作成するパス名の場合に本番環境でパスプレフィックスを付加するヘルパー関数として用意される。`import { withPrefix } from "gatsby"`を使う。
 
-## \<StaticImage\>
+## StaticImage
 
 静的画像専用。サイトのロゴやヒーロー画像など常に同じ画像を表示するものにはこちらを利用する。
 `src`(相対的なパス)と`alt`を必ず指定する。
 
 **`props`や動的な変数は渡せない**、**styled コンポーネントに未対応**など制約が多いので注意。例えば map 内で使ったり、StaticImage の props に state を渡すことはできない
 
-## \<GatsbyImage\>
+## GatsbyImage
 
 動的画像専用。props として渡されるような画像の場合やサムネイルなどはこちらを利用する。
 
