intro r3f and insert article

--- a/content/works/DeidaraHand.mdx
+++ b/content/works/DeidaraHand.mdx
@@ -8,6 +8,8 @@ tag:
 
 手のモデリング練習。せっかくなのでデイダラの手に。小指と薬指に筋が入った(それはそれで手っぽく見えるが)
 
+<SketchFab src="https://sketchfab.com/3d-models/deidara-hand-3feed243f8cf4a5fa1947a8fec87621d" />
+
 手の関節を動かそうとしてみたがリギング難しい...。
 
 ![](https://res.cloudinary.com/dso4npatn/image/upload/v1647049674/media/works/insert/My-Post_l4th75.png)
